--- a/ClimaAPI/ClimaAPI.csproj
+++ b/ClimaAPI/ClimaAPI.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\SQL\" />
+  </ItemGroup>
+
 
 </Project>
